--- a/.devcontainer/compose.yaml
+++ b/.devcontainer/compose.yaml
@@ -27,6 +27,8 @@ services:
     restart: unless-stopped
     networks:
     - default
+    ports:
+    - 5432:5432
     volumes:
     - postgres-data:/var/lib/postgresql/data
     environment:
