--- a/config/database.yml
+++ b/config/database.yml
@@ -27,13 +27,13 @@ default: &default
 
 development:
   <<: *default
-  database: four_ledger_development
+  database: honeyledger_development
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
   # When left blank, PostgreSQL will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: four_ledger
+  #username: honeyledger
 
   # The password associated with the PostgreSQL role (username).
   #password:
@@ -61,7 +61,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: four_ledger_test
+  database: honeyledger_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -92,18 +92,18 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    database: four_ledger_production
-    username: four_ledger
-    password: <%= ENV["FOUR_LEDGER_DATABASE_PASSWORD"] %>
+    database: honeyledger_production
+    username: honeyledger
+    password: <%= ENV["HONEYLEDGER_DATABASE_PASSWORD"] %>
   cache:
     <<: *primary_production
-    database: four_ledger_production_cache
+    database: honeyledger_production_cache
     migrations_paths: db/cache_migrate
   queue:
     <<: *primary_production
-    database: four_ledger_production_queue
+    database: honeyledger_production_queue
     migrations_paths: db/queue_migrate
   cable:
     <<: *primary_production
-    database: four_ledger_production_cable
+    database: honeyledger_production_cable
     migrations_paths: db/cable_migrate
